updated ids in html and added margins. added background color for card headers in css

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,9 +23,17 @@ h1 {
     color:white;
 }
 
+#fivedayCard {
+   
+}
+
+.card-header {
+    background: #76e2f4; 
+}
+
 .border-bottom{
     color: #301781; 
 }
 .second-color { 
-	background: #76e2f4; 
+	
 }
