--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,9 @@ h1 {
 }
 
 .card-header {
-    background: #76e2f4; 
+    background: radial-gradient(circle at 12.3% 19.3%, rgb(85, 88, 218) 0%, rgb(95, 209, 249) 100.2%);
+    color: white;
+    /* background: #76e2f4;  */
 }
 
 .border-bottom{
