--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,25 @@ h1 {
     color:white;
 }
 
+.history-btn {
+    background: #615dec;
+    color:white;
+    margin-top: 4px;
+    margin-bottom: 2px; 
+    border: none;
+    border-radius: 4px;
+    padding: 6px;   
+}
+
+.history-btn:hover {
+    background: #615dec;
+    color:black;
+    margin-top: 4px;
+    margin-bottom: 2px; 
+    border: none;
+    border-radius: 4px;
+    padding: 6px;   
+}
 .cityButtons {
     background:#301781;
     color:white;
